# mccn-case-studies

./: .dockerignore  .gitignore  DEV-README.md  Dockerfile  README.md  pyproject.toml
Case 1/: MCCN-CASE 1 refactored.ipynb  MCCN-CASE 1.ipynb  README.md
Case 1/Data Sources/: README.md
Case 1/source_data/: boundary_act.geojson  caladenia_act.csv  vegetation_cover.tif
Case 2/: MCCN-CASE 2.ipynb  README.md
Case 2/source_data/: BradGinns_SOIL2004_SoilData.csv  Llara_Campey_field_boundaries_poly.dbf  Llara_Campey_field_boundaries_poly.shp  Llara_Campey_field_boundaries_poly.shx
Case 3/: MCCN-CASE 3.ipynb  README.md  config.json
Case 3/case_study_3_stac/: collection.json
Case 4/: MCCN-CASE 4.ipynb  README.md
Case 4/source_data/: 10DAY_MAX_AIRTEMPERATURE_20250414162054.csv  10DAY_MIN_AIRTEMPERATURE_20250414162111.csv  DPIRD_weather_stations.json  mean_max_2025040720250407.grid  mean_max_2025040820250408.grid  mean_max_2025040920250409.grid  mean_max_2025041020250410.grid  mean_max_2025041120250411.grid  mean_max_2025041220250412.grid  mean_max_2025041320250413.grid  mean_min_2025040720250407.grid  mean_min_2025040820250408.grid  mean_min_2025040920250409.grid  mean_min_2025041020250410.grid  mean_min_2025041120250411.grid  (+2 more)
Case 5/: MCCN-CASE 5.ipynb  README.md  llara_point_config.json  llara_shape_config.json  scenario_2_config.json
Case 6/: MCCN-CASE 6.ipynb  README.md
Case 7/: MCCN-CASE 7 scenario 1.ipynb  MCCN-CASE 7 scenario 2.ipynb  MCCN-CASE 7.ipynb  llara_point_config.json  llara_shape_config.json  scenario_1_config.json  scenario_2_config.json
(+41 files in other folders)
