[project]
name = "mccn-case-studies"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "APPN", email = "hoangson.le@adelaide.edu.au"},
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}
dependencies = ["mccn-engine>=0.1.14", "scikit-learn>=1.6.1"]


[tool.pdm]
distribution = false

